# adv_project

catkin_ws/: .gitignore
catkin_ws/src/: .gitignore  KodakPixproSp3604K.yaml  collection.launch
catkin_ws/src/omni_calib/: CMakeLists.txt  input.txt
catkin_ws/src/omni_calib/images/: imagelist.yaml  omni_calib  out_camera_params.xml
catkin_ws/src/omni_mapping/: CMakeLists.txt  package.xml
catkin_ws/src/omni_mapping/calibration/: calibrate.py
catkin_ws/src/omni_mapping/launch/: omni_mapping.launch
catkin_ws/src/omni_mapping/scripts/: global_registration.py  groundtruth.py  omni_mapper.py  omni_rectified_node.py  omnicam.py  orb_matcher.py  perspective_rect_test.py  utils.py
catkin_ws/src/omni_mapping/test_data/: pc1.pcd  pc2.pcd  pc3.pcd  pc4.pcd
